#3: Test M2M auth with JDBC driver